Pending changes exported from your codespace

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,7 @@ jobs:
               uses: JamesIves/github-pages-deploy-action@4.1.4
               with:
                   branch: gh-pages
+                  token :  ${{ secrets.TOKEN }}
                   folder: public
                   clean: true
                   single-commit: true
