--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,49 +7,29 @@ on:
         branches: [master]
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
+  deploy:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: true  # Fetch Hugo themes (true OR recursive)
+          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
-        steps:
-            - uses: actions/checkout@v2
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: 'latest'
+          extended: true
+                  
 
-            - name: Cache Hugo resources
-              uses: actions/cache@v2
-              env:
-                  cache-name: cache-hugo-resources
-              with:
-                  path: resources
-                  key: ${{ env.cache-name }}
-
-            - uses: actions/setup-go@v2
-              with:
-                  go-version: "^1.17.0"
-            - run: go version
-
-            - name: Cache Go Modules
-              uses: actions/cache@v2
-              with:
-                  path: |
-                      ~/.cache/go-build
-                      ~/go/pkg/mod
-                  key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-                  restore-keys: |
-                      ${{ runner.os }}-go-
-
-            - name: Setup Hugo
-              uses: peaceiris/actions-hugo@v2
-              with:
-                  hugo-version: "latest"
-                  extended: true
-
-            - name: Build
-              run: hugo --minify --gc
-
-            - name: Deploy 🚀
-              uses: JamesIves/github-pages-deploy-action@v4.4.1
-              with:
-                  branch: gh-pages
-                  token :  ${{ secrets.TOKEN }}
-                  folder: public
-                  clean: true
-                  single-commit: true
+      - name: Build
+        run: hugo --minify --gc
+              
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4.4.1
+        with:
+          branch: gh-pages
+          token :  ${{ secrets.TOKEN }}
+          folder: public
+          clean: true
+          single-commit: true
